--- a/plugin.xml
+++ b/plugin.xml
@@ -51,37 +51,21 @@
 		<titre>icone_statistiques_visites</titre>		
 	</bouton>
 	
-		<bouton id='statistiques_repartition' parent='statistiques_visites'>
-			<icone>images/rubrique-24.gif</icone>
+		<onglet id='statistiques_visites' parent='statistiques'>
+			<icone>null</icone>
+			<titre>icone_statistiques_visites</titre>
+			<url>statistiques_visites</url>
+		</onglet>
+		<onglet id='statistiques_repartition' parent='statistiques'>
+			<icone>null</icone>
 			<titre>icone_repartition_visites</titre>
-		</bouton>
-			<onglet id='popularite_repartition' parent='stat_depuis'>
-				<icone>null</icone>
-				<titre>icone_repartition_actuelle</titre>
-				<url>statistiques_repartition</url>
-			</onglet>
-			<onglet id='debut_repartition' parent='stat_depuis'>
-				<icone>null</icone>
-				<titre>onglet_repartition_debut</titre>
-				<url>statistiques_repartition</url>
-				<args>critere=debut</args>
-			</onglet>
-			
-		<bouton id='statistiques_lang' parent='statistiques_visites'>
-			<icone>images/langues-24.gif</icone>
+			<url>statistiques_repartition</url>
+		</onglet>
+		<onglet id='statistiques_lang' parent='statistiques'>
+			<icone>null</icone>
 			<titre>onglet_repartition_lang</titre>
-		</bouton>	
-			<onglet id='popularite' parent='rep_depuis'>
-				<icone>null</icone>
-				<titre>icone_repartition_actuelle</titre>
-				<url>statistiques_lang</url>
-			</onglet>
-			<onglet id='debut' parent='rep_depuis'>
-				<icone>null</icone>
-				<titre>onglet_repartition_debut</titre>
-				<url>statistiques_lang</url>
-				<args>critere=debut</args>
-			</onglet>		
+			<url>statistiques_lang</url>
+		</onglet>
 		
 		<bouton id='statistiques_referers' parent='statistiques_visites'>
 			<icone>images/referers-24.gif</icone>
